CSS: fix z-index and responsive sidebar

--- a/style.css
+++ b/style.css
@@ -151,7 +151,7 @@ p {
     padding 0.2s ease-in-out, background 0.1s ease;
   -o-transition: opacity 0.3s ease-in-out, top 1s ease-in-out,
     padding 0.2s ease-in-out, background 0.1s ease;
-  z-index: 9990;
+  z-index: 9999;
 }
 
 .container {
@@ -293,7 +293,7 @@ p {
 #navbar.navbar--dark {
   background-color: var(--color-black);
   color: white;
-  z-index: 1;
+  z-index: 9999;
   padding-top: 10px;
   padding-bottom: 10px;
 }
@@ -410,7 +410,7 @@ p {
   font-size: 57.6px;
   height: 70px;
   line-height: 70px;
-  margin-bottom: 10px;
+  padding-bottom: 10px;
   margin-left: 60px;
   font-weight: 200;
   color: white;
@@ -672,6 +672,7 @@ p {
 }
 
 /* Work */
+
 .work__categories {
   margin: 40px;
 }
@@ -756,6 +757,7 @@ p {
   opacity: 0;
   transform: translateY(10px);
   transition: all var(--animation-duration) ease-in;
+  z-index: 0;
 }
 
 .project:hover .project__description {
@@ -906,7 +908,7 @@ p {
     right: 50px;
   }
 
-  #sidebar.open {
+  #sidebar {
     width: 100%;
     max-width: 400px;
   }
@@ -941,17 +943,17 @@ p {
     height: 1px;
   }
 
-  #sidebar .navbar__toggle-btn {
-    display: block;
-    color: white;
+  .profile-info-wrap {
+    padding-left: 60px;
+    padding-right: 0px;
+  }
 
-    right: -10px;
-    top: 8.5px;
-    float: right;
-    font-size: 24px;
-    cursor: pointer;
-    color: white;
-    opacity: 1;
+  .profile-info-wrap .profile-name {
+    font-size: 10px;
+  }
+
+  .profile-info-wrap .profile-location {
+    font-size: 20px;
   }
 
   #navbar {
